fix posts clipping

--- a/src/app.css
+++ b/src/app.css
@@ -102,7 +102,6 @@ a {
   align-items: center;
   background: var(--color-overlay);
   width: 50%;
-  height: 25%;
   margin-top: 2em;
   border-radius: 10px;
   position: relative;
